@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11179] "IObjectRepository.getIdentifiersUnqualilfied"
    - bug [11180] "Bruges FedoraMain klassen?"
    - bug [11174] "Har vi brug for to Pair implementeringer?"
    - bug [11168] "SimpleTest mangler unittest"
